AuditLogHelper: enumerate more audit events